Project after 1 review

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,12 +3,20 @@ server {
   index index.html;
   server_tokens off;
 
+  location /s/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/s/;
+    client_max_body_size 20M;
+    server_tokens off;
+  }
+
   location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/api/;
     client_max_body_size 20M;
     server_tokens off;
   }
+  
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
