--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,8 @@ cryptography==43.0.0
 defusedxml==0.8.0rc2
 Django==3.2.16
 django-cors-headers==3.13.0
+django-extensions==3.2.3
+django-extra-fields==3.0.2
 django-filter==23.1
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
