--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           context: ./backend/
           push: true
-          tags: ${{ secrets.USERNAME }}/foodgram_backend:latest
+          tags: ${{ secrets.USERNAME }}/foodgram_backend
 
   frontend_tests:
     runs-on: ubuntu-latest
@@ -103,7 +103,7 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: ${{ secrets.USERNAME }}/foodgram_frontend:latest
+          tags: ${{ secrets.USERNAME }}/foodgram_frontend
 
   build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
@@ -124,7 +124,7 @@ jobs:
         with:
           context: ./nginx/
           push: true
-          tags: ${{ secrets.USERNAME }}/foodgram_gateway:latest
+          tags: ${{ secrets.USERNAME }}/foodgram_gateway
 
   deploy:
     runs-on: ubuntu-latest
