--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           context: ./backend/
           push: true
-          tags: ${{ secrets.USERNAME }}/foodgram_backend:v4
+          tags: ${{ secrets.USERNAME }}/foodgram_backend:latest
 
   frontend_tests:
     runs-on: ubuntu-latest
@@ -73,7 +73,7 @@ jobs:
     - name: Set up nodeJS
       uses: actions/setup-node@v3
       with:
-        node-version: 21.7-alpine
+        node-version: 21.7.1-alpine
     - name: Install dependencies
       run: |
         cd frontend/
@@ -103,7 +103,7 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: ${{ secrets.USERNAME }}/foodgram_frontend:v4
+          tags: ${{ secrets.USERNAME }}/foodgram_frontend:latest
 
   build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
@@ -124,7 +124,7 @@ jobs:
         with:
           context: ./nginx/
           push: true
-          tags: ${{ secrets.USERNAME }}/foodgram_gateway:v4
+          tags: ${{ secrets.USERNAME }}/foodgram_gateway:latest
 
   deploy:
     runs-on: ubuntu-latest
