--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,6 +29,10 @@ server {
         server_tokens off;
     }
 
+  location /api/docs/ { 
+        root /usr/share/nginx/html; 
+        try_files $uri $uri/redoc.html;
+
   location / {
     alias /static/;
     try_files $uri $uri/ /index.html;
