--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.3'
 
 volumes:
   pg_data:
@@ -25,6 +25,11 @@ services:
     command: cp -r /app/build/. /static/
     volumes:
       - static:/static/
+  frontend_docs: 
+    container_name: foodgram-front 
+    build: ./frontend/ 
+    volumes: 
+      - ./frontend/:/app/result_build/
   gateway:
     build: ./nginx/
     env_file: .env
@@ -33,3 +38,7 @@ services:
     volumes:
       - static:/static/
       - media:/media/
+      - ./frontend/build:/usr/share/nginx/html/
+      - ./docs/:/usr/share/nginx/html/api/docs/
+    depends_on:
+      - backend
