--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
   location /api/docs/ { 
     root /usr/share/nginx/html; 
     try_files $uri $uri/redoc.html;
-    server_tokens off;
+#    server_tokens off;
   }
 
   location /s/ {
