--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -33,10 +33,10 @@ services:
     command: cp -r /app/build/. /static/
     volumes:
       - static:/static
-  frontend_docs: 
-    image: adyval/foodgram_front 
-    env_file: .env 
-    volumes: 
+  frontend_docs:
+    image: adyval/foodgram_front
+    env_file: .env
+    volumes:
       - ./frontend/:/app/result_build/
   gateway:
     image: adyval/foodgram_gateway
@@ -47,6 +47,6 @@ services:
       - static:/static
       - media:/media
       - ./frontend/build:/usr/share/nginx/html/
-      - ./docs/:/usr/share/nginx/html/api/docs/
+      - ../docs/:/usr/share/nginx/html/api/docs/
     depends_on:
       - backend
